# oxydice

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
apps/oxydice/: package-lock.json  package.json
apps/oxydice/src/: app.html
apps/oxydice/src-tauri/: Cargo.toml  tauri.conf.json
apps/oxydice/src-tauri/capabilities/: default.json
apps/oxydice/src-tauri/src/: lib.rs  main.rs
apps/oxydice/src/lib/: Editor.svelte  Tree.svelte  api.ts  i18n.svelte.ts  theme.ts
apps/oxydice/src/routes/: +layout.svelte  +page.svelte
assets/fonts/: README.md
crates/oxydice-core/: Cargo.toml
crates/oxydice-core/src/: config.rs  doc.rs  export.rs  lib.rs  render.rs  search.rs  theme.rs  vault.rs  viewer.rs
crates/oxydice-core/src/ext/: mod.rs  sync.rs  theme.rs
crates/oxydice-core/src/sync/: backend.rs  index.rs  mod.rs  reconcile.rs
docs/: extensiones.md  plantilla-extension.rs
packaging/: Info.plist  rustnotes.desktop  rustnotes.iss
src/: app.rs  config.rs  doc.rs  main.rs  search.rs  theme.rs
src/ext/: mod.rs  sync.rs  theme.rs
