[package]
name = "rustnotes"
version = "0.1.0"
edition = "2021"
description = "RustNotes — aplicación nativa para crear y leer notas Markdown"
license = "MIT"
authors = ["Aleixenandros"]
repository = "https://github.com/Aleixenandros/RustNotes"

[dependencies]
eframe = "0.34"
egui_commonmark = "0.23"
rfd = "0.17"
walkdir = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1

# --- Empaquetado .deb (cargo-deb) ---
[package.metadata.deb]
maintainer = "Aleixenandros"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rustnotes", "usr/bin/", "755"],
]

# --- Empaquetado .rpm (cargo-generate-rpm) ---
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rustnotes", dest = "/usr/bin/rustnotes", mode = "755" },
]
