[workspace]
resolver = "2"
members = ["crates/oxydice-core", "apps/oxydice/src-tauri"]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Aleixenandros"]
repository = "https://github.com/Aleixenandros/oxydice"

[workspace.dependencies]
oxydice-core = { path = "crates/oxydice-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
